Add floppy driver bare bones

--- a/isodir/boot/grub/grub.cfg
+++ b/isodir/boot/grub/grub.cfg
@@ -3,10 +3,17 @@ insmod gfxterm
 insmod vbe
 insmod vga
 
-timeout=0
+timeout=5
 
 # Говорим грузить SynapseOS вместе с initrd
 menuentry "SynapseOS" {
+	multiboot /boot/kernel.elf
+	module /boot/initrd.tar initrd;  
+    boot
+}
+
+# Server
+menuentry "SynapseOS Server" {
 	multiboot /boot/kernel.elf
 	module /boot/initrd.tar initrd;  
     boot
