--- a/isodir/boot/grub/grub.cfg
+++ b/isodir/boot/grub/grub.cfg
@@ -13,8 +13,13 @@ menuentry "SynapseOS" {
 }
 
 # Server
-menuentry "SynapseOS Server" {
-	multiboot /boot/kernel.elf
-	module /boot/initrd.tar initrd;  
+menuentry "Axon" {
+	multiboot /boot/axon.elf
+    boot
+}
+
+# Manager
+menuentry "Dendrite" {
+	multiboot /boot/dendr.elf
     boot
 }
