--- a/isodir/boot/grub/grub.cfg
+++ b/isodir/boot/grub/grub.cfg
@@ -6,20 +6,33 @@ insmod vga
 timeout=5
 
 # Говорим грузить SynapseOS вместе с initrd
-menuentry "SynapseOS" {
+menuentry "SynapseOS BIOS" {
 	multiboot /boot/kernel.elf
 	module /boot/initrd.tar initrd;  
     boot
 }
 
-# Server
-menuentry "Axon" {
+# UEFI Версия
+menuentry "SynapseOS UEFI" {
+	multiboot /boot/kernel.efi
+	module /boot/initrd.tar initrd;  
+    boot
+}
+
+# Сервер Axon
+menuentry "Server Axon" {
 	multiboot /boot/axon.elf
     boot
 }
 
-# Manager
-menuentry "Dendrite" {
+# Менеджер ОС Dendrite
+menuentry "Manager Dendrite" {
 	multiboot /boot/dendr.elf
     boot
+}
+
+# Установщик Soma
+menuentry "Installer Soma" {
+	multiboot /boot/some.elf
+	boot
 }
