Исправления в структуре проекта

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
         "stdint.h": "c",
         "stdbool.h": "c",
         "kernel.h": "c",
-        "vesa.h": "c"
+        "vesa.h": "c",
+        "elf.h": "c",
+        "syscalls.h": "c"
     }
 }
