Добавлены комментарии в скрипт автосборки

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,42 +1,39 @@
 name: SynapseOS Buildbot
 
-# Controls when the workflow will run
+# Контроль событий при которых будет сборка
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
+  # В нашем случае это push в ветку master
   push:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
-
-  # Allows you to run this workflow manually from the Actions tab
+  # Позволяет запускать этот рабочий процесс вручную на вкладке Actions
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+# Выполнение рабочего процесса состоит из одного или нескольких заданий, которые могут выполняться последовательно или параллельно
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
+    #  Все будет работать на последней версии Ubuntu
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    # Шаги представляют собой последовательность задач, которые будут выполняться как часть задания
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      # Install python3, grub-pc-bin, xorriso, mtools
+      # Установка зависимостей
       - name: Install python3, grub-pc-bin, xorriso, mtools
         run: sudo apt install python3 grub-pc-bin xorriso mtools
 
-      # Download i686-elf-tools
+      # Скачивание и установка i686-elf-tools
       - name: Download i686-elf-tools
         run: |
           wget -nv https://github.com/lordmilko/i686-elf-tools/releases/download/7.1.0/i686-elf-tools-linux.zip
           sudo unzip i686-elf-tools-linux.zip -d /usr/local
           rm i686-elf-tools-linux.zip
-      # Run ./build-actions.sh
+      # Запуск сборки
       - name: Run build
         run: python3 build.py kernel iso
-
+      # Публикация релиза
       - name: Create a Release
         uses: elgohr/Github-Release-Action@v4
         env:
