--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,4 +53,5 @@ jobs:
           files: |
             LICENSE
             SynapseOS.iso
-            kernel.elf
+            isodir/boot/initrd.tar
+            isodir/boot/kernel.elf
