Изменен алгоритм сборки для приложений

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,7 @@ jobs:
       - name: Publish
         run: |
           echo "done!"
+          ls isodir/boot/
           ls
 
       - uses: "marvinpinto/action-automatic-releases@latest"
