--- a/limine.cfg
+++ b/limine.cfg
@@ -1,4 +1,7 @@
 TIMEOUT=5
+GRAPHICS=yes
 :SynapseOS
+BACKGROUND_PARTITION=0
+BACKGROUND_PATH=bg.bmp
 PROTOCOL=multiboot
 KERNEL_PATH=boot:///kernel.elf
