Немного исправил конфиг limine

--- a/limine.cfg
+++ b/limine.cfg
@@ -1,7 +1,49 @@
-TIMEOUT=5
+TIMEOUT=10
 GRAPHICS=yes
-:SynapseOS
-BACKGROUND_PARTITION=0
-BACKGROUND_PATH=bg.bmp
+TERM_MARGIN_GRADIENT=8
+TERM_WALLPAPER=boot:///bg.bmp
+BACKGROUND_PATH=boot:///bg.bmp
+VERBOSE=yes
+INTERFACE_RESOLUTION=1024x768
+
+:SynapseOS multiboot
+RESOLUTION=1024x768
 PROTOCOL=multiboot
 KERNEL_PATH=boot:///kernel.elf
+MODULE_PATH=boot:///initrd.tar
+MODULE_STRING=ramdisk
+
+:SynapseOS multiboot1
+RESOLUTION=1024x768
+PROTOCOL=multiboot1
+KERNEL_PATH=boot:///kernel.elf
+MODULE_PATH=boot:///initrd.tar
+MODULE_STRING=ramdisk
+
+:SynapseOS multiboot2
+RESOLUTION=1024x768
+PROTOCOL=multiboot2
+KERNEL_PATH=boot:///kernel.elf
+MODULE_PATH=boot:///initrd.tar
+MODULE_STRING=ramdisk
+
+:SynapseOS chainload
+RESOLUTION=1024x768
+PROTOCOL=chainload
+KERNEL_PATH=boot:///kernel.elf
+MODULE_PATH=boot:///initrd.tar
+MODULE_STRING=ramdisk
+
+:SynapseOS chainload_next
+RESOLUTION=1024x768
+PROTOCOL=chainload_next
+KERNEL_PATH=boot:///kernel.elf
+MODULE_PATH=boot:///initrd.tar
+MODULE_STRING=ramdisk
+
+:SynapseOS linux
+RESOLUTION=1024x768
+PROTOCOL=linux
+KERNEL_PATH=boot:///kernel.elf
+MODULE_PATH=boot:///initrd.tar
+MODULE_STRING=ramdisk
