Чтение файлов в стандартной библиотеке apps/libc

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "kernel.h": "c",
         "vesa.h": "c",
         "elf.h": "c",
-        "syscalls.h": "c"
+        "syscalls.h": "c",
+        "stdfile.h": "c"
     }
 }
