--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,10 +7,10 @@ on:
     tags:
         - "v*"
     branches: [ "master" ]
-  pull_request:
-    tags:
-        - "v*"
-    branches: [ "master" ]
+  #pull_request:
+  #  tags:
+  #      - "v*"
+  #  branches: [ "master" ]
   # Позволяет запускать этот рабочий процесс вручную на вкладке Actions
   workflow_dispatch:
 
