--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "elf.h": "c",
         "syscalls.h": "c",
         "stdfile.h": "c",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "sb16.h": "c"
     }
 }
