--- a/isodir/boot/grub/grub.cfg
+++ b/isodir/boot/grub/grub.cfg
@@ -7,32 +7,32 @@ timeout=5
 
 # Говорим грузить SynapseOS вместе с initrd
 menuentry "SynapseOS BIOS" {
-	multiboot /boot/kernel.elf
-	module /boot/initrd.tar initrd;  
-    boot
+ 	multiboot /boot/kernel.elf
+ 	module /boot/initrd.tar initrd;  
+	boot
 }
 
 # UEFI Версия
-menuentry "SynapseOS UEFI" {
-	multiboot /boot/kernel.efi
-	module /boot/initrd.tar initrd;  
-    boot
-}
+#menuentry "SynapseOS UEFI" {
+# 	multiboot /boot/kernel.efi
+# 	module /boot/initrd.tar initrd;  
+#	boot
+#}
 
 # Сервер Axon
-menuentry "Server Axon" {
-	multiboot /boot/axon.elf
-    boot
-}
+#menuentry "Server Axon" {
+# 	multiboot /boot/axon.elf
+#	boot
+#}
 
 # Менеджер ОС Dendrite
-menuentry "Manager Dendrite" {
-	multiboot /boot/dendr.elf
-    boot
-}
+#menuentry "Manager Dendrite" {
+# 	multiboot /boot/dendr.elf
+#	boot
+#}
 
 # Установщик Soma
-menuentry "Installer Soma" {
-	multiboot /boot/some.elf
-	boot
-}
+#menuentry "Installer Soma" {
+# 	multiboot /boot/some.elf
+# 	boot
+#}
