--- a/isodir/boot/grub/grub.cfg
+++ b/isodir/boot/grub/grub.cfg
@@ -8,7 +8,8 @@ timeout=5
 # Говорим грузить SynapseOS вместе с initrd
 menuentry "SynapseOS BIOS" {
  	multiboot /boot/kernel.elf
- 	module /boot/initrd.tar initrd;  
+ 	module /boot/initrd.tar initrd; 
+	#module /boot/initrd.tar "HELLO"; 
 	boot
 }
 
