--- a/isodir/boot/grub/grub.cfg
+++ b/isodir/boot/grub/grub.cfg
@@ -14,11 +14,7 @@ menuentry "SynapseOS BIOS" {
 }
 
 # UEFI Версия
-#menuentry "SynapseOS UEFI" {
-# 	multiboot /boot/kernel.efi
-# 	module /boot/initrd.tar initrd;  
-#	boot
-#}
+
 
 # Сервер Axon
 #menuentry "Server Axon" {
@@ -37,3 +33,13 @@ menuentry "SynapseOS BIOS" {
 # 	multiboot /boot/some.elf
 # 	boot
 #}
+
+menuentry --hotkey=p 'List PCI' {
+   lspci
+}
+menuentry --hotkey=r 'Reboot' {
+   reboot
+}
+menuentry --hotkey=h 'Halt' {
+   halt
+}
