--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,15 +59,13 @@ jobs:
       - name: Publish docs
         run: |
           git clone https://github.com/0nera/SynapseOS.git -b site
-          cp -a ./docs/doxygen/html/* ./SynapseOS/
-          cd ./SynapseOS/
       - name: Commit changes
         uses: EndBug/add-and-commit@v9
         with:
           author_name: Github
           author_email: github@example.com
           message: 'Deploy doxygen'
-          add: '*'
+          add: 'docs/doxygen/html/*'
 
       # Публикация релиза
       - uses: "marvinpinto/action-automatic-releases@latest"
