--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,7 @@ jobs:
       # Запуск Doxygen
       - name: Doxygen
         run: |
+          rm -rf docs/doxygen/
           sudo doxygen Doxyfile
           ls docs/doxygen/
           ls
