Fixes of file i/o on apps

--- a/apps/NEEDED_LATER/zlib-1.1.0/Makefile
+++ b/apps/NEEDED_LATER/zlib-1.1.0/Makefile
@@ -14,7 +14,7 @@
 
 CC=clang -target i386-pc-none-elf
 
-CFLAGS=-O0 -Wno-unused-command-line-argument -mno-sse -mno-avx -ffreestanding -I ../include/
+CFLAGS=-O0 -Wno-unused-command-line-argument -mno-sse -mno-avx -ffreestanding -I ../../include/
 #CFLAGS=-O -DMAX_WBITS=14 -DMAX_MEM_LEVEL=7
 #CFLAGS=-g -DDEBUG
 #CFLAGS=-O3 -Wall -Wwrite-strings -Wpointer-arith -Wconversion \
