Revert "исправление: Возвращение к i686-elf-gcc"
This reverts commit c54bce1b20d2e49116245ae215bf46e52de6ea96.

--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -27,9 +27,7 @@ jobs:
       # Установка зависимостей
       - name: Installing
         run: |
-          sudo apt install python3 build-essential xorriso grub-pc-bin mtools fasm
-          wget -nv https://github.com/lordmilko/i686-elf-tools/releases/download/7.1.0/i686-elf-tools-linux.zip
-          sudo unzip i686-elf-tools-linux.zip -d /usr/local
+          sudo apt install python3 grub-pc-bin xorriso mtools llvm lld fasm
 
           
       # Запуск сборки
