--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,10 +30,8 @@ jobs:
       # Установка зависимостей
       - name: Installing
         run: |
-          sudo apt install python3 build-essential xorriso grub-pc-bin mtools fasm zip doxygen
-          wget -nv https://github.com/lordmilko/i686-elf-tools/releases/download/7.1.0/i686-elf-tools-linux.zip
-          sudo unzip i686-elf-tools-linux.zip -d /usr/local
-  
+          sudo apt install python3 build-essential xorriso grub-pc-bin mtools llvm lld fasm zip doxygen
+          
       # Запуск сборки ядра
       - name: Building  kernel
         run: python3 build.py kernel
