--- a/isodir/boot/grub/grub.cfg
+++ b/isodir/boot/grub/grub.cfg
@@ -13,6 +13,24 @@ menuentry "SynapseOS BIOS" {
 	boot
 }
 
+menuentry "SynapseOS BIOS [BootScreen=Minimal]" {
+ 	multiboot /boot/kernel.elf --bootscreen=minimal fake
+ 	module /boot/initrd.tar initrd;
+	boot
+}
+
+menuentry "SynapseOS BIOS [Tshell]" {
+ 	multiboot /boot/kernel.elf --tshell fake
+ 	module /boot/initrd.tar initrd;
+	boot
+}
+
+menuentry "SynapseOS BIOS [noRTL]" {
+ 	multiboot /boot/kernel.elf --nortl8139 fake
+ 	module /boot/initrd.tar initrd;
+	boot
+}
+
 # UEFI Версия
 
 
