Kernel Update v0.0.2 by pimnik98
Обновления ядра 0.0.2
[*] Добавлено base64encode / base64decode
[*] Добавлены функции str_split (для разделения строк) и str_cdsp (для подсчета количества строк, которые могут быть разделены)
[*] Обновлена функция для определния наличия строки в тексте, а также добавлена функция-зеркало, только возращает bool
[*] Переписан shell.c - Теперь работает через split
[*] shell.c - все команды работают через shell
[*] shell.c - для запуска команды использовать run пример `run Russia` или просто название программы `Russia`. Учтите, что запуск программы выполняется с папки в которой вы находитесь.
[*] shell.c - добавлена функция hostname - без аргументов выводит название пк, если указать название то сменит его
[*] shell.c - добавлена функция whoami - выводит имя текущего пользователя
[*] kernel.c - улучшена обработка kCMD - переведен на split
[*] kernel.c - добавлено больше вариаций для загрузки
[*] ну и прочие

Все доступные вариации загрузки:
* --bootscreen=minimal  - Включает BootScreen в режиме логгирования
* --bootscreen=light    - Светлая тема для BootScreen
* --bootscreen=dark     - Темная тема для BootScreen
* --tshell              - После загрузки, вы сразу попадете в TShell
* --nortl8139           - Отключает проверку иницилизации драйвера Realtek RTL8139

Следуют учесть, что некоторые параметры переопределяют друг друга, тот что в конце, тот и главнее.
И все параметры можно комбинировать, просто добавите их после параметра ядра.
Вот обычный вариант: `multiboot /boot/kernel.elf`
Вариант с параметрами: `multiboot /boot/kernel.elf --nortl8139 --bootscreen=minimal`

--- a/isodir/boot/grub/grub.cfg
+++ b/isodir/boot/grub/grub.cfg
@@ -13,21 +13,22 @@ menuentry "SynapseOS BIOS" {
 	boot
 }
 
-menuentry "SynapseOS BIOS [BootScreen=Minimal]" {
- 	multiboot /boot/kernel.elf --bootscreen=minimal fake
+menuentry "SynapseOS BIOS [bs:Light]" {
+ 	multiboot /boot/kernel.elf --bootscreen=light
  	module /boot/initrd.tar initrd;
 	boot
 }
 
-menuentry "SynapseOS BIOS [Tshell]" {
- 	multiboot /boot/kernel.elf --tshell fake
+menuentry "SynapseOS BIOS [tshell]" {
+ 	multiboot /boot/kernel.elf --tshell --bootscreen=dark
  	module /boot/initrd.tar initrd;
 	boot
 }
 
-menuentry "SynapseOS BIOS [noRTL]" {
- 	multiboot /boot/kernel.elf --nortl8139 fake
+menuentry "SynapseOS BIOS [noRTL+bs:minimal] [800x600x32]" {
+ 	multiboot /boot/kernel.elf --nortl8139 --bootscreen=minimal
  	module /boot/initrd.tar initrd;
+ 	set gfxpayload=800x600x32
 	boot
 }
 
