--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -14,6 +14,7 @@ on:
   # Позволяет запускать этот рабочий процесс вручную на вкладке Actions
   workflow_dispatch:
 
+
 # Выполнение рабочего процесса состоит из одного или нескольких заданий, которые могут выполняться последовательно или параллельно
 jobs:
   build:
@@ -27,15 +28,14 @@ jobs:
       # Установка зависимостей
       - name: Installing
         run: |
-          sudo apt install python3 grub-pc-bin xorriso mtools llvm lld fasm
-
+          sudo apt install python3 build-essential xorriso mtools fasm zip doxygen
           
-      # Запуск сборки
+      # Запуск сборки ядра
       - name: Building  kernel
-        run: python3 build.py kernel
+        run: python3 scripts/build.py
 
-      - name: Building  apps
-        run: python3 build.py apps
-
-      - name: Building  iso
-        run: python3 build.py iso isol
+      # Проверка релиза
+      - name: Check publish
+        run: |
+          echo "done!"
+          ls
