--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,8 +44,7 @@ jobs:
       - name: Limine
         run: |
           git clone https://github.com/limine-bootloader/limine.git --branch=v3.0-branch-binary --depth=1
-          cd limine & make all & make install
-          cd ..
+          make -C limine
           
       # Запуск сборки ядра
       - name: Building  kernel
