--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
         run: |
           git clone https://github.com/limine-bootloader/limine.git --branch=v3.0-branch-binary --depth=1
           make -C limine
-          
+          cp limine/BOOTIA32.EFI limine/BOOTX64.EFI limine/limine-cd-efi.bin limine/limine.sys limine/limine-cd.bin isodir/
       # Запуск сборки ядра
       - name: Building  kernel
         run: | 
