--- a/.github/workflows/only_gcc.yml
+++ b/.github/workflows/only_gcc.yml
@@ -46,13 +46,13 @@ jobs:
           ls
 
       # Публикация релиза
-      - name: Publish release
+      - name: Publish test release 
         uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "latest-unstable"
+          automatic_release_tag: "latest-unstable-test"
           prerelease: true
-          title: "[Автосборка] Нестабильный релиз"
+          title: "[Автосборка] Экспериментальный релиз"
           description: "Внимание! Данный релиз собран из последних изменений в ядре! Это не окончательная версия содержит ошибки и не рекомендуется к запуску без проверки на виртуальной машине."
           files: |
             LICENSE
