[сборка] Добавление опции noqemu

--- a/.github/workflows/only_gcc.yml
+++ b/.github/workflows/only_gcc.yml
@@ -37,7 +37,7 @@ jobs:
       # Запуск сборки ядра
       - name: Building  kernel
         run: | 
-          python3 scripts/build.py -compiler "gcc -m32" -linker "ld -m elf_i386"
+          python3 scripts/build.py -noqemu 1 -compiler "gcc -m32" -linker "ld -m elf_i386"
   
       # Проверка релиза
       - name: Check publish
