--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -53,7 +53,7 @@ jobs:
       # Запуск сборки ядра
       - name: Building  kernel
         run: | 
-          python3 scripts/build.py -noqemu 1 -limine "./limine-deploy"
+          python3 scripts/build.py -noqemu 1 -limine "./limine-deploy" -docs 1
           
   
       # Проверка релиза
