--- a/.github/workflows/only_gcc.yml
+++ b/.github/workflows/only_gcc.yml
@@ -39,7 +39,7 @@ jobs:
       # Запуск сборки ядра
       - name: Building  kernel
         run: | 
-          python3 scripts/build.py -noqemu 1 -limine "./limine-deploy" -compiler "gcc -m32" -linker "ld -m elf_i386"
+          python3 scripts/build.py -noqemu 1 -limine "./limine-deploy" -compiler "gcc -m32" -linker "ld -m elf_i386"  -docs 1
   
       # Проверка релиза
       - name: Check publish
