[фича] Elf загрузчик [1/3]

--- a/isodir/limine.cfg
+++ b/isodir/limine.cfg
@@ -13,8 +13,8 @@ PROTOCOL=multiboot
 KERNEL_CMDLINE=Hello World!
 KERNEL_PATH=boot:///boot/kernel.elf
 
-#MODULE_PATH=boot:///modules/test.seb
-#MODULE_STRING=test.seb
+MODULE_PATH=boot:///modules/simple.elf
+MODULE_STRING=simple.elf
 
 #MODULE_PATH=boot:///graf/test.sbi
 #MODULE_STRING=test.sbi
