--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "makefile.extensionOutputFolder": "./.vscode",
     "files.associations": {
+        "*.html": "html",
         "stdint.h": "c",
         "stdbool.h": "c",
         "kernel.h": "c",
@@ -10,7 +11,8 @@
         "stdfile.h": "c",
         "stdio.h": "c",
         "sb16.h": "c",
-        "assert.h": "c"
+        "assert.h": "c",
+        "modlib.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled",
     "clangd.path": "clangd-11"
