[рефакторинг] Добавлена поддержка clangd, исправление build файла модуля simple, оптимизирован .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,19 @@
-*.o
-*.elf
+isodir/
+!isodir/**/*.cfg
 *.log
 *.iso
-*.img
-*.uibak
-*.qcow2
-*.tar
-*.sea
-*.vhd
-*.tmp
-*.rtf
+*.txt
 bin/
+debug/
 docs/files/ru/~$ководство пользователя.docx
 test/
 bochsout.txt
 serial.txt
-kernel/subsystems/*
+kernel/subsystems/
 bin/apps/
 limine
 .vscode
-.vscode/*
+.cache
+compile_commands.json
 docs/doxygen/html/
-*.EFI
-*.bin
-*.sys
-*.sys
-*.EFI
 elf-loader/
-*.txt
-*.zip
-*.sem
